.provarCaches/00D6C0000000xA6UAI/objects/ccpgcs__E_PaymentType__c.object
<CustomObject>
    <description>CyberSource Payment Types</description>
    <fields>
        <fullName>ccpgcs__CardVerification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Card Verification is a feature of this payment method.</description>
        <label>Card Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccpgcs__PayerAuthentication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Payer Authentication is a feature of this payment method.</description>
        <label>Payer Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccpgcs__Type__c</fullName>
        <description>Unique CyberSource code for a payment method type (e.g. 001 for Visa).</description>
        <externalId>true</externalId>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CCPGCS Payment Type</label>
    <nameField>
        <label>CCPGCS Payment Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCPGCS Payment Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>